clusters/app.ci/prow/03_deployment/gcsweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  replicas: 2
  selector:
    matchLabels:
      component: gcsweb
  template:
    metadata:
      labels:
        app: prow
        component: gcsweb
    spec:
      containers:
      - image: quay-proxy.ci.openshift.org/openshift/ci:ci_nginx-unprivileged_stable
        name: gcsweb
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config
        configMap:
          name: gcsweb-redirect-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.openshift.io/infrastructure: "true"
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    component: gcsweb
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 1h
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gcsweb
